[package]
name = "mnml-db-redis"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Redis viewer for mnml — terminal TUI with multiple saved connections and a command playground."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-db-redis"
readme = "README.md"

[[bin]]
name = "mnml-db-redis"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", default-features = false, features = ["tokio-rustls-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
